first BDD stat working test